[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pcs"
version = "0.0.2"
description = "PCS instalation package."
license = {text = "Proprietary"}
authors = [
    {name="PCS"}
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages]
find = {} 

[tool.setuptools.packages.find]
where = ["pcs"]