[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pcs"
version = "0.0.3"
description = "PCS instalation package."
license = {text = "Proprietary"}
authors = [
    {name="PCS"}
]
dependencies = [
    "Jinja2",
    "fpdf2",
    "pyairtable",
    
]
[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages.find]
where = ["."] 
include = ["pcs*"]  # ["*"] by default
exclude = []  # empty by default
namespaces = false  # true by default